--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
 .contact .btn-1
 .modal-content .btn-1{
     background: #ffffff;
-    color: #a80164#fff;
-    border: 2px solid #fff;
+    color: #a80164 ;
+    border: 2px solid #a81764;
 }
 .btn-1,.btn-2,
 .contact .btn-1:hover,
