--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .fixed{
-    background: linear-gradient(to right, #ffff,#000);
+    background: #fff;
 }
 body, html {
     overflow: visible; /* Allow the modal to be fully visible */
 }
 .modal-dialog {
-    overflow: auto; /* Enable scrolling for large modals */
+    overflow: auto !important; /* Enable scrolling for large modals */
 }
 .modal-open {
     overflow: visible !important; /* Allow the body to overflow if needed */
