--- a/style.css
+++ b/style.css
@@ -171,20 +171,13 @@ textarea
     font-size: 12px;
     line-height: 1.5;
 }
-i{
+/* i{
     padding: 0px 2px;
+} */
+.new-1 i{
+    color: #006909;
+    font-size: 2.5rem;
 }
-.new-1 i
-{
-    color: #a80164 ;
-    background-color: #fff ;
-    border-radius: 10px ;
-    padding: 10px;
-    text-decoration: none;
-}
-.new-1 i:hover {
- border: 2px solid #fff;
- border-radius: 10px;
- color: #fff;
- background-color: transparent;
+.new-1 i:hover{
+    color: #fff;
 }
